# SPTask2

./: CMakeLists.txt
src/: main.cpp
